--- a/langs/en.json
+++ b/langs/en.json
@@ -1,67 +1,194 @@
 {
-    "Common":{
-        "Dashboard": "Dashboard",
-        "Users": "Users",
-        "Roles": "Roles",
-        "Permissions": "Permissions",
-        "Logs": "Logs",
-        "Lookups": "Lookups",
-        "Logout" : "Logout",
-        "Welcome to Duty Hub — Preparing your workspace": "Welcome to Duty Hub — Preparing your workspace",
-        "Logging out — Ending your session": "Logging out — Ending your session"
-    },
-    "Dashboard":{},
-    "SignInPage":{
-        "Login failed": "Login failed.",
-        "Username": "Username",
-        "Password": "Password",
-        "Confirm Password": "Confirm Password",
-        "Log In": "Log In",
-        "Logging In": "Logging In",
-        "Invalid username or password": "Invalid username or password."
-    }, 
-    "User":{
-        "Name": "Name",
-        "Email": "Email",
-        "Username": "Username",
-        "BP No": "BP No",
-        "Password": "Password",
-        "Confirm Password": "Confirm Password",
-        "Phone 1": "Phone 1",
-        "Phone 2": "Phone 2",
-        "Blood Group": "Blood Group",
-        "Current Status": "Current Status",
-        "Date of Birth": "Date of Birth",
-        "NID": "NID",
-        "Profile Picture": "Profile Picture",
-        "Roles": "Roles",
-        "Permissions": "Permissions",
-        "Email already exists": "Email already exists.",
-        "Username already exists": "Username already exists.",
-        "BP No already exists": "BP No already exists.",
-        "Select Blood Group":"Select Blood Group",
-        "Select Current Status":"Select Current Status",
-        "Search":"Search",
-        "Loading":"Loading",
-        "Select option(s)":"Select option(s)",
-        "No options found":"No options found.",
-        "Select Roles":"Select Roles",
-        "Select Permissions":"Select Permissions",
-        "Register User":"Register User",
-        "Edit User":"Edit User",
-        "Description":"Description",
-        "Address":"Address",
-        "Enter a description":"Enter a description",
-        "Enter a address":"Enter a address",
-        "Invalid email":"Invalid email",
-        "Name is required":"Name is required",
-        "Phone Number is required and at least 11 Digits":"Phone Number is required and at least 11 Digits",
-        "None":"None"
-    },
-    "ErrorPages":{
-        "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
-        "You don’t have permission to view this page": "You don’t have permission to view this page.",
-        "Go Back": "Go Back"
-    },  
-    "Errors":{} 
-}
+    "Dashboard": "Dashboard",
+    "Users": "Users",
+    "Logs": "Logs",
+    "Lookups": "Lookups",
+    "Logout": "Logout",
+    "Welcome to Duty Hub — Preparing your workspace": "Welcome to Duty Hub — Preparing your workspace",
+    "Logging out — Ending your session": "Logging out — Ending your session",
+    "Login failed": "Login failed.",
+    "Log In": "Log In",
+    "Logging In": "Logging In",
+    "Invalid username or password": "Invalid username or password.",
+    "Name": "Name",
+    "Email": "Email",
+    "Username": "Username",
+    "BP No": "BP No",
+    "Password": "Password",
+    "Confirm Password": "Confirm Password",
+    "Phone": "Phone",
+    "Phone 1": "Phone 1",
+    "Phone 2": "Phone 2",
+    "Blood Group": "Blood Group",
+    "Current Status": "Current Status",
+    "Date of Birth": "Date of Birth",
+    "NID": "NID",
+    "Profile Picture": "Profile Picture",
+    "Roles": "Roles",
+    "Permissions": "Permissions",
+    "Email already exists": "Email already exists.",
+    "Username already exists": "Username already exists",
+    "BP No already exists": "BP No already exists",
+    "Email already in use": "Email already in use.",
+    "BP No must be unique": "BP No must be unique.",
+    "Select Blood Group": "Select Blood Group",
+    "Select Current Status": "Select Current Status",
+    "Select Status": "Select Status",
+    "Enter address": "Enter address",
+    "Enter description": "Enter description",
+    "Search": "Search",
+    "Loading": "Loading",
+    "Select option(s)": "Select option(s)",
+    "No options found": "No options found.",
+    "Select Roles": "Select Roles",
+    "Select Permissions": "Select Permissions",
+    "Register User": "Register User",
+    "Edit User": "Edit User",
+    "Description": "Description",
+    "Address": "Address",
+    "Enter a description": "Enter a description",
+    "Enter a address": "Enter a address",
+    "Invalid email": "Invalid email",
+    "Name is required": "Name is required",
+    "Phone Number is required and at least 11 Digits": "Phone Number is required and at least 11 Digits",
+    "None": "None",
+    "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
+    "You don’t have permission to view this page": "You don’t have permission to view this page.",
+    "Go Back": "Go Back",
+    "Column Settings": "Column Settings",
+    "Display": "Display",
+    "Move Up": "Move Up",
+    "Move Down": "Move Down",
+    "Move to Top": "Move to Top",
+    "Move to Bottom": "Move to Bottom",
+    "Move to Do not Display": "Move to Do not Display",
+    "Move to Display": "Move to Display",
+    "Hide All": "Hide All",
+    "Show All": "Show All",
+    "Do Not Display": "Do Not Display",
+    "Filter columns": "Filter columns",
+    "Save": "Save",
+    "Refresh": "Refresh",
+    "Reset": "Reset",
+    "Close": "Close",
+    "Column settings refreshed from database": "Column settings refreshed from database",
+    "Failed to refresh column settings from database": "Failed to refresh column settings from database",
+    "Confirm": "Confirm",
+    "Are you sure?": "Are you sure?",
+    "Yes": "Yes",
+    "Cancel": "Cancel",
+    "Apply Filters": "Apply Filters",
+    "Detail": "Detail",
+    "Edit": "Edit",
+    "Delete": "Delete",
+    "Showing": "Showing",
+    "to": "to",
+    "Total": "Total",
+    "Add New": "Add New",
+    "Filter": "Filter",
+    "Columns": "Columns",
+    "Print": "Print",
+    "Excel": "Excel",
+    "Rows per page": "Rows per page",
+    "Previous": "Previous",
+    "Next": "Next",
+    "Active": "Active",
+    "Inactive": "Inactive",
+    "Update User": "Update User",
+    "Saving": "Saving",
+    "Username is required": "Username is required",
+    "Phone Number must be at least 11 digits": "Phone Number must be at least 11 digits",
+    "Status is required": "Status is required",
+    "Select at least one role": "Select at least one role",
+    "Invalid user ID": "Invalid user ID",
+    "Invalid role ID": "Invalid role ID",
+    "Invalid permission ID": "Invalid permission ID",
+    "Only image files are allowed": "Only image files are allowed",
+    "User updated successfully!": "User updated successfully!",
+    "Update failed": "Update failed",
+    "Something went wrong": "Something went wrong",
+    "use client": "use client",
+    "SL": "SL",
+    "Action": "Action",
+    "Decrypted Password": "Decrypted Password",
+    "Age": "Age",
+    "Created At": "Created At",
+    "Updated At": "Updated At",
+    "Register New User": "Register New User",
+    "User Table": "User Table",
+    "Filter Users": "Filter Users",
+    "Confirm Deletion": "Confirm Deletion",
+    "Are you sure you want to delete this user": "Are you sure you want to delete this user",
+    "Deleting": "Deleting",
+    "permissions": "permissions",
+    "Password must be at least 6 characters": "Password must be at least 6 characters",
+    "Confirmed password is required": "Confirmed password is required",
+    "Passwords don't match": "Passwords don't match",
+    "Registration failed": "Registration failed",
+    "User registered successfully!": "User registered successfully!",
+    "Select your date of birth": "Select your date of birth",
+    "Reset Form": "Reset Form",
+    "Registering": "Registering",
+    "Role(s)": "Role(s)",
+    "Role Permissions": "Role Permissions",
+    "Direct Permission(s)": "Direct Permission(s)",
+    "Status": "Status",
+    "All": "All",
+    "authorization": "authorization",
+    "Unauthorized": "Unauthorized",
+    "Invalid token payload": "Invalid token payload",
+    "error": "error",
+    "id": "id",
+    "collection": "collection",
+    "fieldName": "fieldName",
+    "fieldValue": "fieldValue",
+    "exceptFieldName": "exceptFieldName",
+    "exceptFieldValue": "exceptFieldValue",
+    "Missing required parameters: collection, fieldName, or fieldValue": "Missing required parameters: collection, fieldName, or fieldValue",
+    "Invalid collection": "Invalid collection",
+    "_id": "_id",
+    "exists": "exists",
+    "Check-unique error:": "Check-unique error:",
+    "Invalid or expired token": "Invalid or expired token",
+    "User": "User",
+    "Logged out": "Logged out",
+    "Logout error": "Logout error",
+    "Internal Server Error": "Internal Server Error",
+    "Invalid token": "Invalid token",
+    "Missing tableId or userId": "Missing tableId or userId",
+    "Server error or invalid token": "Server error or invalid token",
+    "Missing or invalid data": "Missing or invalid data",
+    "Invalid userId": "Invalid userId",
+    "Updated column combination for table:": "Updated column combination for table:",
+    "Created new column combination for table:": "Created new column combination for table:",
+    "Invalid value passed to extractId": "Invalid value passed to extractId",
+    "Invalid token or server error": "Invalid token or server error",
+    "Phone number is required": "Phone number is required",
+    "Passwords do not match": "Passwords do not match",
+    "Email or username already exists": "Email or username already exists",
+    "User created: ": "User created: ",
+    "User Registration Error": "User Registration Error",
+    "User not found": "User not found",
+    "User updated": "User updated",
+    "User updated successfully": "User updated successfully",
+    "User deleted": "User deleted",
+    "Cannot delete user due to existing reference": "Cannot delete user due to existing reference",
+    "User deleted successfully": "User deleted successfully",
+    "Delete failed": "Delete failed",
+    "Drag & drop or click to select an image": "Drag & drop or click to select an image",
+    "Remove Image": "Remove Image",
+    "User Details": "User Details",
+    "Add New Role": "Add New Role",
+    "Created By": "Created By",
+    "Guard Name": "Guard Name",
+    "Updated By": "Updated By",
+    "Add Role": "Add Role",
+    "Select Guard Name": "Select Guard Name",
+    "Update Role": "Update Role",
+    "Are you sure you want to delete": "Are you sure you want to delete",
+    "Adding": "Adding",
+    "Role added successfully!": "Role added successfully!",
+    "Role updated successfully!": "Role updated successfully!",
+    "Edit Role": "Edit Role"
+  }
+  
