--- a/langs/bn.json
+++ b/langs/bn.json
@@ -214,6 +214,7 @@
     "Server error": "সার্ভার ত্রুটি",
     "Role updated successfully": "রোল সফলভাবে আপডেট হয়েছে",
     "Cannot delete permission due to existing reference": "বিদ্যমান রেফারেন্স থাকার কারণে পারমিশন মুছে ফেলা যায়নি।",
-    "Permission deleted successfully": "পারমিশন সফলভাবে মুছে ফেলা হয়েছে"
+    "Permission deleted successfully": "পারমিশন সফলভাবে মুছে ফেলা হয়েছে",
+    "Permission Roles":"পারমিশনের রোলস"
   }
   
