--- a/langs/en.json
+++ b/langs/en.json
@@ -214,6 +214,7 @@
     "Server error": "Server error",
     "Role updated successfully": "Role updated successfully",
     "Cannot delete permission due to existing reference": "Cannot delete permission due to existing reference",
-    "Permission deleted successfully": "Permission deleted successfully"
+    "Permission deleted successfully": "Permission deleted successfully",
+    "Permission Roles":"Permission Roles"
   }
   
