Auth User Role Permission ReInit

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -203,6 +203,7 @@
     "Permission Table": "পারমিশন টেবিল",
     "Permission Details": "পারমিশন বিস্তারিত",
     "Edit Permission": "পারমিশন সম্পাদনা করুন",
+    "Filter Roles": "রোল ফিল্টার করুন",
     "Filter Permissions": "পারমিশন ফিল্টার করুন",
     "Permission created:": "পারমিশন তৈরি হয়েছে:",
     "Permission updated:": "পারমিশন আপডেট হয়েছে:",
