--- a/langs/en.json
+++ b/langs/en.json
@@ -203,6 +203,7 @@
     "Permission Table": "Permission Table",
     "Permission Details": "Permission Details",
     "Edit Permission": "Edit Permission",
+    "Filter Roles": "Filter Roles",
     "Filter Permissions": "Filter Permissions",
     "Permission created": "Permission created",
     "Permission updated": "Permission updated",
