docs: add new i18n strings for collection management
Add new internationalization strings to support collection management features in the UI. The new strings include "Collection Name", "Action Type", and "Object ID" which are needed for upcoming functionality.

--- a/langs/en.json
+++ b/langs/en.json
@@ -216,6 +216,9 @@
     "Role updated successfully": "Role updated successfully",
     "Cannot delete permission due to existing reference": "Cannot delete permission due to existing reference",
     "Permission deleted successfully": "Permission deleted successfully",
-    "Permission Roles":"Permission Roles"
+    "Permission Roles":"Permission Roles",
+    "Collection Name":"Collection Name",
+    "Action Type":"Action Type",
+    "Object ID":"Object ID"
   }
   
