feat(logs): enhance logs module with filtering and export capabilities
- Add filter modal with date range, collection and action type filters
- Implement table export to Excel functionality
- Improve log changes parsing and normalization
- Add column visibility management for logs table
- Update translations for new log features
- Fix type definitions for ILog interface

--- a/langs/en.json
+++ b/langs/en.json
@@ -219,6 +219,13 @@
     "Permission Roles":"Permission Roles",
     "Collection Name":"Collection Name",
     "Action Type":"Action Type",
-    "Object ID":"Object ID"
+    "Filter Logs":"Filter Logs",
+    "Select Collection":"Select Collection",
+    "Select Action":"Select Action",
+    "From Date":"From Date",
+    "To Date":"To Date",
+    "Object ID":"Object ID",
+    "Changes":"Changes",
+    "Log Details":"Log Details"
   }
   
