--- a/langs/bn.json
+++ b/langs/bn.json
@@ -190,7 +190,6 @@
     "Are you sure you want to delete": "আপনি কি নিশ্চিত যে আপনি মুছে ফেলতে চান",
     "Edit Role": "রোল সম্পাদনা করুন",
     "User Details": "ইউজার বিস্তারিত",
-
     "Guard Name is required": "গার্ড নাম আবশ্যক",
     "Each role ID must be a valid ObjectId": "প্রতিটি রোল আইডি একটি বৈধ ObjectId হতে হবে",
     "Name already exists": "নাম ইতিমধ্যেই বিদ্যমান",
@@ -216,6 +215,16 @@
     "Role updated successfully": "রোল সফলভাবে আপডেট হয়েছে",
     "Cannot delete permission due to existing reference": "বিদ্যমান রেফারেন্স থাকার কারণে পারমিশন মুছে ফেলা যায়নি।",
     "Permission deleted successfully": "পারমিশন সফলভাবে মুছে ফেলা হয়েছে",
-    "Permission Roles":"পারমিশনের রোলস"
+    "Permission Roles":"পারমিশনের রোলস",
+    "Collection Name": "কালেকশন নাম",
+  "Action Type": "অ্যাকশন টাইপ",
+  "Filter Logs": "লগ ফিল্টার",
+  "Select Collection": "কালেকশন সিলেক্ট করুন",
+  "Select Action": "অ্যাকশন সিলেক্ট করুন",
+  "From Date": "তারিখ থেকে",
+  "To Date": "তারিখ পর্যন্ত",
+  "Object ID": "অবজেক্ট আইডি",
+  "Changes": "চেঞ্জেস",
+  "Log Details": "লগ ডিটেইলস"
   }
   
