feat(lookups): add new lookup-related translations in Bangla and English language files

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -217,14 +217,56 @@
     "Permission deleted successfully": "পারমিশন সফলভাবে মুছে ফেলা হয়েছে",
     "Permission Roles":"পারমিশনের রোলস",
     "Collection Name": "কালেকশন নাম",
-  "Action Type": "অ্যাকশন টাইপ",
-  "Filter Logs": "লগ ফিল্টার",
-  "Select Collection": "কালেকশন সিলেক্ট করুন",
-  "Select Action": "অ্যাকশন সিলেক্ট করুন",
-  "From Date": "তারিখ থেকে",
-  "To Date": "তারিখ পর্যন্ত",
-  "Object ID": "অবজেক্ট আইডি",
-  "Changes": "চেঞ্জেস",
-  "Log Details": "লগ ডিটেইলস"
+    "Action Type": "অ্যাকশন টাইপ",
+    "Filter Logs": "লগ ফিল্টার",
+    "Select Collection": "কালেকশন সিলেক্ট করুন",
+    "Select Action": "অ্যাকশন সিলেক্ট করুন",
+    "From Date": "তারিখ থেকে",
+    "To Date": "তারিখ পর্যন্ত",
+    "Object ID": "অবজেক্ট আইডি",
+    "Changes": "চেঞ্জেস",
+    "Log Details": "লগ ডিটেইলস",
+    "BN Name": "বাংলা নাম",
+    "Parent": "পেরেন্ট",
+    "Alt Parent": "বিকল্প পেরেন্ট",
+    "Add New Lookup": "নতুন লুকআপ যুক্ত করুন",
+    "Lookup Table": "লুকআপ টেবিল",
+    "Lookup Details": "লুকআপ বিস্তারিত",
+    "Edit Lookup": "লুকআপ এডিট করুন",
+    "Filter Lookups": "লুকআপ ফিল্টার করুন",
+    "Invalid parent ID": "অবৈধ পেরেন্ট আইডি",
+    "Invalid alternate parent ID": "অবৈধ বিকল্প পেরেন্ট আইডি",
+    "Name(s)": "নাম(গুলি)",
+    "e.g. Color=Size": "যেমনঃ কালার=সাইজ",
+    "Bangla Name(s)": "বাংলা নাম(গুলি)",
+    "Parent Lookup": "পেরেন্ট লুকআপ",
+    "Select Parent": "পেরেন্ট নির্বাচন করুন",
+    "Alternate Parent Lookup": "বিকল্প পেরেন্ট লুকআপ",
+    "Select Alt Parent": "বিকল্প পেরেন্ট নির্বাচন করুন",
+    "Add Lookup": "লুকআপ যুক্ত করুন",
+    "Lookup(s) added successfully!": "লুকআপ(গুলি) সফলভাবে যুক্ত হয়েছে!",
+    "Failed to add lookup": "লুকআপ যুক্ত করতে ব্যর্থ হয়েছে",
+    "Something went wrong during lookup creation": "লুকআপ যুক্তকরণ চলাকালে কিছু ভুল হয়েছে",
+    "Invalid ID": "অবৈধ আইডি",
+    "Lookup updated successfully!": "লুকআপ সফলভাবে আপডেট হয়েছে!",
+    "e.g. Size, Color": "যেমনঃ সাইজ, কালার",
+    "Bangla Name": "বাংলা নাম",
+    "Select Alternate Parent": "বিকল্প পেরেন্ট নির্বাচন করুন",
+    "Update Lookup": "লুকআপ আপডেট করুন",
+    "Enter English Name": "ইংরেজি নাম লিখুন",
+    "Enter Bangla Name": "বাংলা নাম লিখুন",
+    "Failed to load lookup filters from localStorage": "লোকালস্টোরেজ থেকে লুকআপ ফিল্টার লোড করতে ব্যর্থ হয়েছে",
+    "Lookup creation error": "লুকআপ যুক্তকরণ এরর",
+    "Lookup creation failed": "লুকআপ যুক্তকরণ ব্যর্থ হয়েছে",
+    "Lookup created": "লুকআপ যুক্ত হয়েছে",
+    "lookup(s) created,": "লুকআপ(গুলি) যুক্ত হয়েছে,",
+    "Invalid lookup ID": "অবৈধ লুকআপ আইডি",
+    "Lookup not found": "লুকআপ পাওয়া যায়নি",
+    "Error fetching lookup detail": "লুকআপ বিস্তারিত আনতে ত্রুটি হয়েছে",
+    "Lookup updated successfully": "লুকআপ সফলভাবে আপডেট হয়েছে",
+    "Lookup Update Error": "লুকআপ আপডেট ত্রুটি",
+    "Cannot delete lookup due to existing reference": "বিদ্যমান রেফারেন্স থাকার কারণে লুকআপ ডিলিট করা সম্ভব নয়",
+    "Lookup deleted successfully": "লুকআপ সফলভাবে ডিলিট হয়েছে",
+    "Delete Lookup Error": "লুকআপ ডিলিট ত্রুটি"
   }
   
