--- a/langs/en.json
+++ b/langs/en.json
@@ -190,7 +190,6 @@
     "Role added successfully!": "Role added successfully!",
     "Role updated successfully!": "Role updated successfully!",
     "Edit Role": "Edit Role",
-
     "Guard Name is required": "Guard Name is required",
     "Each role ID must be a valid ObjectId": "Each role ID must be a valid ObjectId",
     "Name already exists": "Name already exists",
@@ -226,6 +225,49 @@
     "To Date":"To Date",
     "Object ID":"Object ID",
     "Changes":"Changes",
-    "Log Details":"Log Details"
+    "Log Details":"Log Details",
+
+    "BN Name": "BN Name",
+    "Parent": "Parent",
+    "Alt Parent": "Alt Parent",
+    "Add New Lookup": "Add New Lookup",
+    "Lookup Table": "Lookup Table",
+    "Lookup Details": "Lookup Details",
+    "Edit Lookup": "Edit Lookup",
+    "Filter Lookups": "Filter Lookups",
+    "Invalid parent ID": "Invalid parent ID",
+    "Invalid alternate parent ID": "Invalid alternate parent ID",
+    "Name(s)": "Name(s)",
+    "e.g. Color=Size": "e.g. Color=Size",
+    "Bangla Name(s)": "Bangla Name(s)",
+    "Parent Lookup": "Parent Lookup",
+    "Select Parent": "Select Parent",
+    "Alternate Parent Lookup": "Alternate Parent Lookup",
+    "Select Alt Parent": "Select Alt Parent",
+    "Add Lookup": "Add Lookup",
+    "Lookup(s) added successfully!": "Lookup(s) added successfully",
+    "Failed to add lookup": "Failed to add lookup",
+    "Something went wrong during lookup creation": "Something went wrong during lookup creation",
+    "Invalid ID": "Invalid ID",
+    "Lookup updated successfully!": "Lookup updated successfully!",
+    "e.g. Size, Color": "e.g. Size, Color",
+    "Bangla Name": "Bangla Name",
+    "Select Alternate Parent": "Select Alternate Parent",
+    "Update Lookup": "Update Lookup",
+    "Enter English Name": "Enter English Name",
+    "Enter Bangla Name": "Enter Bangla Name",
+    "Failed to load lookup filters from localStorage": "Failed to load lookup filters from localStorage",
+    "Lookup creation error": "Lookup creation error",
+    "Lookup creation failed": "Lookup creation failed",
+    "Lookup created": "Lookup created",
+    "lookup(s) created,": "lookup(s) created,",
+    "Invalid lookup ID": "Invalid lookup ID",
+    "Lookup not found": "Lookup not found",
+    "Error fetching lookup detail": "Error fetching lookup detail",
+    "Lookup updated successfully": "Lookup updated successfully",
+    "Lookup Update Error": "Lookup Update Error",
+    "Cannot delete lookup due to existing reference": "Cannot delete lookup due to existing reference",
+    "Lookup deleted successfully": "Lookup deleted successfully",
+    "Delete Lookup Error": "Delete Lookup Error"
   }
   
